@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{AC151149-6CA1-42D5-A883-C1825E18BA26}" Version="0.5" Language="1033" Name="jfMusic" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{AC151149-6CA1-42D5-A883-C1825E18BA26}" Version="0.6" Language="1033" Name="jfMusic" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
