@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{04CA0F82-B57F-4482-9A3A-470259C1BFE3}" Version="0.1" Language="1033" Name="jfProjector" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{04CA0F82-B57F-4482-9A3A-470259C1BFE3}" Version="0.2" Language="1033" Name="jfProjector" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
