@@ -5,7 +5,7 @@
   <property name="home" location="../.."/>
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
-  <property name="version" value="0.21"/>
+  <property name="version" value="0.22"/>
 
   <property name="debian.depends" value="ffmpeg"/>
   <property name="fedora.depends" value="ffmpeg"/>
